@@ -8,6 +8,7 @@ ksba_ocsp_get_responder_id           NEW.
 ksba_ocsp_get_cert                   NEW.
 ksba_cert_get_authority_info_access  NEW.
 ksba_cert_get_subject_info_access    NEW.
+ksba_cms_add_smime_capability        NEW.
  
 
 Noteworthy changes in version 0.9.4 (2004-02-20)
